# voicevox_core

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DetermineTargetArchitecture.cmake  Dockerfile  LICENSE  README.md  _typos.toml  build.rs  configure.py  configure_directml.py  core.h  core_test.py  deny.toml  pyproject.toml  renovate.json  renovate.json5  requirements.txt  setup.py  voicevox_core.h
core/: CMakeLists.txt  __init__.py  _core.cp39-win_amd64.pyd  _core.pxd  _core.py  _core.pyx  load_model.cmake
core/csrc/: core.cpp
core/src/: core.cpp  core.h  decode_model.h  engine.cpp  model.h
core/src/embedBin/: FindEmbed.cmake  LICENCE.md  embed.h
core/src/engine/: acoustic_feature_extractor.cpp  acoustic_feature_extractor.h  full_context_label.cpp  full_context_label.h  kana_parser.cpp  kana_parser.h  model.h  mora_list.cpp  mora_list.h  openjtalk.cpp  openjtalk.h  synthesis_engine.cpp  synthesis_engine.h
core/src/nlohmann/: json.hpp
crates/download/: Cargo.toml
crates/download/src/: main.rs
crates/downloader/: Cargo.toml  about.toml
crates/downloader/src/: main.rs
crates/openjtalk-sys/: Cargo.toml  build.rs  wrapper.hpp
crates/openjtalk-sys/openjtalk/: CMakeLists.txt
crates/openjtalk-sys/openjtalk/src/: openjtalk.cpp  openjtalk.hpp
crates/openjtalk-sys/src/: lib.rs
crates/test_util/: Cargo.toml  build.rs  compatible_engine.h
crates/test_util/src/: lib.rs  typing.rs
crates/voicevox_core/: Cargo.toml  build.rs  onnxruntime-libs.toml
crates/voicevox_core/benches/: .gitignore  benches.rs  cpu-and-sample-vvm.rs  decode-with-gpu.rs  gpu-and-voicevox-vvm.rs  simulation.rs  walltime.rs
crates/voicevox_core/examples/: talk.rs
crates/voicevox_core/src/: __internal.rs  asyncs.rs  blocking.rs  c_export.rs  collections.rs  convert.rs  core.rs  devices.rs  engine.rs  error.rs  future.rs  include_models.rs  include_speaker_id_map.rs  infer.rs  inference_core.rs  internal.rs  kana_parser.rs  lib.rs  macros.rs  manifest.rs  metas.rs  nonblocking.rs  numerics.rs  publish.rs  result.rs  result_code.rs  status.rs  synthesizer.rs  task.rs  test_util.rs  text_analyzer.rs  tokio.rs  version.rs  voice_model.rs  voice_synthesizer.rs
crates/voicevox_core/src/__internal/: doctest_fixtures.rs  interop.rs  interp.rs
crates/voicevox_core/src/core/: adjust.rs  devices.rs  infer.rs  manifest.rs  metas.rs  status.rs  voice_model.rs  voice_spec.rs
crates/voicevox_core/src/engine/: acoustic_feature_extractor.rs  audio_file.rs  full_context_label.rs  fundamental.rs  interpret_query.rs  kana_parser.rs  mod.rs  model.rs  mora_list.rs  mora_mappings.rs  morph.rs  ndarray.rs  open_jtalk.rs  sampling_rate.rs  song.rs  synthesis_engine.rs  talk.rs  validate.rs
crates/voicevox_core/src/infer/: domain.rs  domains.rs  model_file.rs  runtimes.rs  session_set.rs  signatures.rs  status.rs
crates/voicevox_core/src/status/: model_file.rs
crates/voicevox_core/src/user_dict/: dict.rs  mod.rs  part_of_speech_data.rs  word.rs
crates/voicevox_core_build_features/: Cargo.toml  README.md  onnxruntime-libs.toml  onnxruntime-version.txt
crates/voicevox_core_build_features/src/: download.rs  lib.rs  link.rs
crates/voicevox_core_c_api/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/voicevox_core_c_api/include/: voicevox_core.h
crates/voicevox_core_c_api/src/: c_impls.rs  compatible_engine.rs  drop_check.rs  helpers.rs  lib.rs  object.rs  owners.rs  result_code.rs  slice_owner.rs  v014_compatible_engine.rs
crates/voicevox_core_c_api/src/owners/: c_string.rs  slice.rs
crates/voicevox_core_c_api/tests/e2e/: assert_cdylib.rs  float_assert.rs  hash.rs  log_mask.rs  main.rs  mask.rs  operations.rs  snapshots.rs  snapshots.toml  symbols.rs  testcases.rs
crates/voicevox_core_c_api/xcframework/: README.md
crates/voicevox_core_c_api/xcframework/Headers/: README.md  module.modulemap
crates/voicevox_core_java_api/: .gitattributes  .gitignore  Cargo.toml  README.md  about.toml  settings-android.gradle  settings.gradle
crates/voicevox_core_java_api/lib/: build-android.gradle  build.gradle
crates/voicevox_core_java_api/src/: audio_query.rs  common.rs  info.rs  lib.rs  logger.rs  onnxruntime.rs  open_jtalk.rs  synthesizer.rs  user_dict.rs  utils.rs  voice_model.rs
crates/voicevox_core_macros/: Cargo.toml  README.md
crates/voicevox_core_macros/src/: check.rs  extract.rs  inference_domain.rs  inference_domains.rs  lib.rs  manifest.rs  mora_mappings.rs  python_api.rs
crates/voicevox_core_node_api/: .gitignore  .prettierignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  typedoc.json
crates/voicevox_core_node_api/__test__/: _testUtil.ts  devices.ts  index.spec.mjs  testUtil.ts
crates/voicevox_core_node_api/__test__/blocking/: synthesizer.ts  userDict.ts
crates/voicevox_core_node_api/__test__/promises/: synthesizer.ts  userDict.ts
crates/voicevox_core_node_api/exports/: blocking.d.ts  blocking.js  promises.d.ts  promises.js
crates/voicevox_core_node_api/npm/android-arm64/: README.md  package.json
crates/voicevox_core_node_api/npm/darwin-arm64/: README.md  package.json
crates/voicevox_core_node_api/npm/darwin-x64/: README.md  package.json
crates/voicevox_core_node_api/src/: devices.rs  lib.rs  metas.rs  model.rs  namespaces.rs  synthesizer.rs  word.rs
crates/voicevox_core_python_api/: .gitignore  Cargo.toml  Makefile  README.md  about.toml  build.rs  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
crates/voicevox_core_python_api/src/: convert.rs  lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: commands.rs  main.rs
example/cli/: Cargo.toml  README.md
example/cli/src/: main.rs
example/cpp/: CMakeLists.txt  main.cpp
example/cpp/unix/: .gitignore  CMakeLists.txt  README.md  simple_tts.cpp  song.cpp  talk.cpp
example/cpp/windows/: README.md  windows_example.sln
onnx/: CMakeLists.txt  README.md  core.cpp
onnx/python/: setup.py
onnx/python/core/: __init__.py  _core.pxd
tests/: CMakeLists.txt  core_test.py
(+408 files in other folders)
