[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
android_logger = "0.13.1"
anstream = { version = "0.5.0", default-features = false }
anstyle-query = "1.0.0"
anyhow = "1.0.65"
assert_cmd = "2.0.8"
async-fs = "2.1.2"
async_zip = "=0.0.16"
bindgen = "0.69.4"
binstall-tar = "0.4.39"
bytes = "1.1.0"
camino = "1.1.6"
cargo_metadata = "0.18.1"
cbindgen = "0.24.3"
chrono = { version = "0.4.26", default-features = false }
clap = "4.0.10"
color-eyre = "0.6.2"
colorchoice = "1.0.0"
comrak = "0.26.0"
const_format = "0.2.32"
cstr = "0.2.11" # https://github.com/dtolnay/syn/issues/1502
derive-getters = "0.2.0"
derive-new = "0.5.9"
derive_more = "0.99.17"
duct = "0.13.6"
duplicate = "1.0.0"
easy-ext = "1.0.1"
educe = "0.4.23"
enum-map = "3.0.0-beta.1"
eyre = "0.6.8"
flate2 = "1.0.25"
fs-err = "2.11.0"
futures-core = "0.3.25"
futures-util = "0.3.25"
futures-lite = "2.2.0"
futures-io = "0.3.28"
heck = "0.4.1"
humansize = "2.1.2"
indexmap = "2.0.0"
indicatif = "0.17.3"
indoc = "2.0.4"
inventory = "0.3.4"
itertools = "0.10.5"
jlabel = "0.1.2"
jni = "0.21.1"
libc = "0.2.134"
libloading = "0.7.3"
libtest-mimic = "0.6.0"
log = "0.4.17"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
octocrab = { version = "0.19.0", default-features = false }
once_cell = "1.19.0"
ouroboros = "0.18.0"
parse-display = "0.8.2"
pretty_assertions = "1.3.0"
proc-macro2 = "1.0.69"
pyo3 = "0.20.3"
pyo3-asyncio = "0.20.0"
pyo3-log = "0.9.0"
quote = "1.0.33"
rayon = "1.6.1"
ref-cast = "1.0.23"
regex = "1.10.0"
reqwest = { version = "0.11.13", default-features = false }
rstest = "0.15.0"
rstest_reuse = "0.6.0"
scraper = "0.19.1"
serde = "1.0.203"
serde_json = "1.0.85"
serde_with = "3.3.0"
smallvec = "1.13.1"
strum = "0.24.1"
syn = "2.0.38"
tar = "0.4.38"
tempfile = "3.6.0"
test_util = { path = "crates/test_util" }
thiserror = "1.0.37"
tokio = "1.25.0"
toml = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
typetag = "0.2.5"
url = "2.3.0"
uuid = "1.6.1"
voicevox_core = { path = "crates/voicevox_core" }
windows = "0.43.0"
zip = "0.6.3"

[workspace.dependencies.voicevox-ort]
git = "https://github.com/VOICEVOX/ort.git"
rev = "8627833456a69e7841ae2a29fd184752df8de8d9"

[workspace.dependencies.open_jtalk]
git = "https://github.com/VOICEVOX/open_jtalk-rs.git"
rev = "e1940f3fd61a48bed5bbec8cd2645e13923b1f80"

# FIXME: iOS対応のpull request(https://github.com/wesleywiser/process_path/pull/16)がマージされる見込みが無いため
[workspace.dependencies.process_path]
git = "https://github.com/VOICEVOX/process_path.git"
rev = "de226a26e8e18edbdb1d6f986afe37bbbf35fbf4"

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

# min-sized-rustを元にrelease buildのサイズが小さくなるようにした
# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
