[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
android_logger = "0.13.1"
anstream = { version = "0.6.18", default-features = false }
anstyle-query = "1.1.1"
anyhow = "1.0.99"
assert_cmd = "2.0.16"
async-fs = "2.1.2"
async-lock = "3.4.0"
async_zip = "=0.0.16"
bindgen = "0.71.1"
binstall-tar = "0.4.42"
blocking = "1.6.1"
boxcar = "0.2.6"
bytemuck = "1.24.0"
bytes = "1.7.2"
camino = "1.1.9"
cargo_metadata = "0.18.1"
cbindgen = "0.28.0"
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5.19", features = ["cargo"] }
color-eyre = "0.6.3"
color-print = "0.3.7"
colorchoice = "1.0.2"
comrak = { version = "0.26.0", default-features = false }
const_format = "0.2.33"
derive-getters = "0.2.0"
derive-new = "0.5.9"
derive-syn-parse = "0.2.0"
derive_more = "1.0.0"
divan = { version = "3.0.5", package = "codspeed-divan-compat" }
duct = "0.13.7"
duplicate = "2.0.0"
easy-ext = "1.0.2"
educe = "0.4.23"
either = "1.8.0"
enum-map = "3.0.0-beta.2"
eyre = "0.6.12"
flate2 = "1.0.34"
fs-err = "2.11.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
futures-lite = "2.3.0"
futures-io = "0.3.31"
glob = "0.3.3"
heck = "0.5.0"
humansize = "2.1.3"
indexmap = "2.6.0"
indicatif = "0.17.8"
indoc = "2.0.5"
inventory = "0.3.15"
itertools = "0.10.5"
jlabel = "0.1.4"
jni = "0.21.1"
libc = "0.2.159"
libloading = "0.7.3"
libtest-mimic = "0.6.0"
log = "0.4.22"
minus = "5.6.1"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
octocrab = { version = "0.19.0", default-features = false }
once_cell = "1.20.1"
open = "5.3.2"
ouroboros = "0.18.4"
parking_lot = "0.12.1"
parse-display = "0.8.2"
pastey = "0.2.0"
phf = "0.13.1"
pollster = "0.3.0"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.95"
pyo3 = "0.23.4"
pyo3-log = "0.12.1"
quote = "1.0.37"
rayon = "1.10.0"
ref-cast = "1.0.23"
regex = "1.11.0"
reqwest = { version = "0.11.27", default-features = false }
rprompt = "2.1.1"
rstest = "0.15.0"
rstest_reuse = "0.6.0"
scraper = "0.19.1"
semver = "1.0.14"
serde = "1.0.219"
serde-pyobject = "0.5.0"
serde_json = "1.0.143"
serde_with = "3.12.0"
smallvec = "1.13.2"
strum = "0.24.1"
syn = "2.0.87"
tar = "0.4.42"
tempfile = "3.13.0"
test_util = { path = "crates/test_util" }
thiserror = "1.0.64"
tokio = "1.40.0"
toml = "0.7.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typetag = "0.2.18"
unicode-width = "0.2.0"
uuid = "1.18.1"
voicevox_core = { path = "crates/voicevox_core" }
voicevox_core_macros = { path = "crates/voicevox_core_macros" }
windows = "0.43.0"
zip = "0.6.3"

[workspace.dependencies.voicevox-ort]
git = "https://github.com/VOICEVOX/ort.git"
rev = "22172d0fcf0715c1316f95ea08db50cf55cf0ad4"

[workspace.dependencies.open_jtalk]
git = "https://github.com/VOICEVOX/open_jtalk-rs.git"
rev = "7c87b4227bb005b439a3ad473b48ce8975829576"

# FIXME: iOS対応のpull request(https://github.com/wesleywiser/process_path/pull/16)がマージされる見込みが無いため
[workspace.dependencies.process_path]
git = "https://github.com/VOICEVOX/process_path.git"
rev = "de226a26e8e18edbdb1d6f986afe37bbbf35fbf4"

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false
rust-version = "1.91.0"
license = "MIT"

# min-sized-rustを元にrelease buildのサイズが小さくなるようにした
# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
