[package]
name = "download"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
binstall-tar = "0.4.39"
bytes = "1.1.0"
clap.workspace = true
flate2 = "1.0.25"
fs-err.workspace = true
futures-core = "0.3.25"
futures-util = "0.3.25"
indicatif = "0.17.3"
itertools.workspace = true
octocrab = { version = "0.19.0", default-features = false, features = ["rustls-tls", "stream"] }
once_cell.workspace = true
platforms = "3.0.2"
rayon = "1.6.1"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "stream"] }
strum.workspace = true
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.3.0"
zip = "0.6.3"
