[package]
name = "downloader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "download"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
binstall-tar.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
color-print.workspace = true
comrak.workspace = true
easy-ext.workspace = true
flate2.workspace = true
fs-err = { workspace = true, features = ["tokio"] }
futures-core.workspace = true
futures-util.workspace = true
glob.workspace = true
heck.workspace = true
indexmap.workspace = true
indicatif.workspace = true
indoc.workspace = true
itertools.workspace = true
minus = { workspace = true, features = ["static_output"] }
octocrab = { workspace = true, features = ["stream"] }
parse-display.workspace = true
rayon.workspace = true
rprompt.workspace = true
scraper.workspace = true
semver.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-width.workspace = true
zip.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = "warn"
