[package]
name = "openjtalk-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
generate-bindings = []

[build-dependencies]
cmake = "0.1.48"
bindgen = "0.60.1"

[dependencies]
link-cplusplus = "1.0.6"
