[package]
name = "test_util"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
libloading.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
voicevox-ort.workspace = true # note: `download-binaries`と`copy-dylibs`だけ利用する

[build-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
bindgen.workspace = true
camino.workspace = true
cargo_metadata.workspace = true
flate2.workspace = true
fs-err.workspace = true
indoc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
reqwest.workspace = true
tar.workspace = true
zip.workspace = true

[lints.rust]
unsafe_code = "allow" # C APIのbindgen
rust_2018_idioms = "warn"
