[package]
name = "voicevox_core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[package.metadata.docs.rs]
features = ["load-onnxruntime", "link-onnxruntime"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# ONNX Runtimeのリンク方法を決めるフィーチャ（rustdocを参照）。
load-onnxruntime = ["voicevox-ort/load-dynamic"]
link-onnxruntime = []

# GPUを利用可能にするフィーチャ（rustdocを参照）。
cuda = ["voicevox-ort/cuda"]
directml = ["voicevox-ort/directml"]

[dependencies]
anyhow.workspace = true
async_zip = { workspace = true, features = ["deflate"] }
camino.workspace = true
const_format.workspace = true
derive-getters.workspace = true
derive-new.workspace = true
derive_more.workspace = true
duplicate.workspace = true
easy-ext.workspace = true
educe.workspace = true
enum-map.workspace = true
fs-err = { workspace = true, features = ["tokio"] }
futures.workspace = true
indexmap = { workspace = true, features = ["serde"] }
itertools.workspace = true
jlabel.workspace = true
ndarray.workspace = true
once_cell.workspace = true
open_jtalk.workspace = true
ouroboros.workspace = true
process_path.workspace = true
rayon.workspace = true
ref-cast.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with.workspace = true
smallvec.workspace = true
strum = { workspace = true, features = ["derive"] }
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] } # FIXME: feature-gateする
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
voicevox-ort = { workspace = true, features = ["download-binaries", "__init-for-voicevox"] }
voicevox_core_macros = { path = "../voicevox_core_macros" }
zip.workspace = true

[dev-dependencies]
heck.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
test_util.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[target."cfg(windows)".dependencies]
humansize.workspace = true
windows = { workspace = true, features = ["Win32_Foundation", "Win32_Graphics_Dxgi"] }

[lints.rust]
# FIXME: `unsafe impl Send`のもあるが、以下2つのマージにより消える予定
# * https://github.com/VOICEVOX/voicevox_core/pull/725
# * https://github.com/VOICEVOX/voicevox_core/pull/772
unsafe_code = "allow" # WindowsのGPU情報表示に、Win32を利用
rust_2018_idioms = "warn"
