[package]
name = "voicevox_core"
version.workspace = true
edition = "2021"
publish.workspace = true
rust-version = "1.84.0" # TODO: Rust 1.88以降にするときは、 #1083 (async closures) および #1104 (let chain, `#[cfg(false)]`) と同じことをする
license.workspace = true

[package.metadata.docs.rs]
features = ["load-onnxruntime", "link-onnxruntime"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "benches"
harness = false
required-features = ["load-onnxruntime"]

# rustdocを参照
[features]
default = []
load-onnxruntime = ["voicevox-ort/load-dynamic"]
link-onnxruntime = []

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
async-lock.workspace = true
async_zip = { workspace = true, features = ["deflate"] }
blocking.workspace = true
bytemuck = { workspace = true, features = ["derive", "must_cast"] }
camino.workspace = true
const_format.workspace = true
derive-getters.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = ["add", "as_ref", "debug", "deref", "display", "from", "from_str", "index", "into"] }
duplicate.workspace = true
easy-ext.workspace = true
educe.workspace = true
enum-map = { workspace = true, features = ["serde"] }
fs-err.workspace = true
futures-io.workspace = true
futures-lite.workspace = true
futures-util = { workspace = true, features = ["io"] }
indexmap = { workspace = true, features = ["serde"] }
itertools.workspace = true
jlabel.workspace = true
ndarray.workspace = true
open_jtalk.workspace = true
ouroboros.workspace = true
phf = { workspace = true, features = ["macros"] }
ref-cast.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with.workspace = true
smallvec.workspace = true
strum = { workspace = true, features = ["derive"] }
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
voicevox-ort = { workspace = true, features = ["download-binaries", "__init-for-voicevox"] }
voicevox_core_macros.workspace = true

[dev-dependencies]
divan.workspace = true
open.workspace = true
pollster = { workspace = true, features = ["macro"] }
pretty_assertions.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
test_util.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[target."cfg(windows)".dependencies]
humansize.workspace = true
windows = { workspace = true, features = ["Win32_Foundation", "Win32_Graphics_Dxgi"] }

[lints.rust]
unsafe_code = "allow" # WindowsのGPU情報表示に、Win32を利用
rust_2018_idioms = "warn"
